src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Core Lead Process</fullName>
        <description>Core Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Abbreviated_Name__c</fullName>
        <description>Global/CTIMGI: Displays a shortened version of the Account name for the request a new Account functionality.</description>
        <label>Abbreviated Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Achievement__c</fullName>
        <description>Field to identify the academic achievement of the School/College</description>
        <label>Academic Achievement</label>
        <picklist>
            <controllingField>Organisation_Type1__c</controllingField>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Currency__c</fullName>
        <description>Global/CTIMGI: This field is displaying the account currency used for the request a new Account functionality.</description>
        <label>Account Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_1_PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global/CTIMGI: Identifies if the Adress is a PO Box address for the request a account functionality.</description>
        <label>Address 1 PO Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_2_PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global/CTIMGI - Identifies if the Adress is a PO Box address for request the account functionality.</description>
        <label>Address 2 PO Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CORE - Records the value amount that the potential opportunity would be worth.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <description>Global/CTIMGI - records the city for the billing address in the request a new account functionality.</description>
        <label>Billing City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>Global/CTIMGI: Field to record the country for the Billing address of an account for the request a new account functionality.</description>
        <label>Billing Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <description>Global/CTIMGI: Field to record the street for the Billing address of an account for the request a new account functionality.</description>
        <label>Billing Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Interviews__c</fullName>
        <description>CTIMGI field: Identifies the number of Interviews that the Student has either cancelled or has not shown up to. This Counts the number of Event &apos;Interview&apos; records with the Cancellation reason &apos;No Show&apos; or &apos;Student Cancelled&apos;</description>
        <label>Cancelled Interviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <description>CTIMGI field: Identifies the country that the person on the Lead originates from.</description>
        <label>Country of Origin</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia And Herzegowina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course_Applied_for_another_Institution__c</fullName>
        <description>CTIMGI Field: Identifies the other course/qualification that the Lead has applied for at other Universities.</description>
        <label>Courses Applied for another Institution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Global/CTIMGI field: Captures the date that the Prospect in Lead was born on.</description>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_ownership_change__c</fullName>
        <description>Global/CTIMGI field: Captures the data that the Lead changed ownership to a new user.</description>
        <label>Date of ownership change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_in_Open_Status__c</fullName>
        <description>Global/CTIMGI field: The Formula calculates the number of days that the Lead has been in the Status &apos;Open&apos;</description>
        <formula>IF( ISNULL(Lead_changed_InProgress__c),TODAY()- Lead_changed_Open__c, Lead_changed_InProgress__c - Lead_changed_Open__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in &apos;Open&apos; Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Progress_Status__c</fullName>
        <description>Global/CTIMGI Field: The Formula calculates the number of days that the Lead has been in the Status &apos;In Progress&apos;</description>
        <formula>IF( ISNULL(Lead_changed_Qualified__c)  &amp;&amp; ISNULL(Lead_changed_Unqualified__c),  TODAY() -  Lead_changed_InProgress__c  ,  IF(  ISNULL(Lead_changed_Unqualified__c ) ,   Lead_changed_Unqualified__c  -   Lead_changed_InProgress__c  ,   Lead_changed_Unqualified__c  -   Lead_changed_InProgress__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in &apos;Progress’ Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Qualified__c</fullName>
        <description>Global/ CTIMGI field: The Formula calculates the number of days that the Lead has been in the Status &apos;Qualified&apos;</description>
        <formula>TODAY() - Lead_changed_Qualified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in ‘Qualified’ Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Unqualified_Status__c</fullName>
        <description>Global/CTIMGI Field: The Formula calculates the number of days that the Lead has been in the Status &apos;Unqualified&apos;</description>
        <formula>TODAY() -  Lead_changed_Unqualified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in ‘Unqualified’ Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_lead_owner_changed__c</fullName>
        <description>Global/CTIMGI field: This formula fields calculates the number of days since the owner of the Lead changed.</description>
        <formula>IF(AND(IsConverted = False,CreatedById &lt;&gt; OwnerId),ROUND(TODAY() - Date_of_ownership_change__c,0),ROUND(NOW()-CreatedDate, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since lead owner changed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discipline__c</fullName>
        <description>CORE</description>
        <label>Discipline</label>
        <picklist>
            <picklistValues>
                <fullName>Allied Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomy &amp; Physiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthropology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Microbiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Sciences &amp; Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary, Hospitality, Travel &amp; Tourism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf Studies &amp; Deaf Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS &amp; Fire Science (Brady)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Interior Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geology &amp; Oceanography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Kinesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interdisciplinary Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Studies &amp; Paralegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discipline_of_interest__c</fullName>
        <description>Global/CTIMGI/CORE field: Identifies the subject area that lead is interested in.</description>
        <label>Discipline of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Allied Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomy &amp; Physiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anthropology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Microbiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communication Sciences &amp; Disorders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal Justice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary, Hospitality, Travel &amp; Tourism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf Studies &amp; Deaf Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMS &amp; Fire Science (Brady)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fashion &amp; Interior Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geology &amp; Oceanography</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Kinesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interdisciplinary Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Studies &amp; Paralegal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>CORE: This identifies the Division that the lead belongs to.</description>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_not_send_Marketing_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CTIMGI: Identifies that the Lead has requested to be omitted from Marketing communications.</description>
        <label>Do not send Marketing Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <description>CTIMGI: Identifies the line of busines of the lead from Direct to Learner, Business to Business or Business to Business to Learner.</description>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>D2L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B2L</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <description>Core: Multi-picklist to select the type of deal the lead may result in</description>
        <inlineHelpText>Select one or more based on the interest or needs of the Lead.</inlineHelpText>
        <label>Enquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Learning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_Language__c</fullName>
        <description>CTIMGI: Identifies the first langauge that the person on the lead speaks.</description>
        <label>First Language</label>
        <picklist>
            <picklistValues>
                <fullName>Afrikaans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>isiNdebele</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>isiXhosa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>isiZulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sesotho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>siSwati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tshivenda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xitsonga</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <description>CTIMGI: Identifies the date that the owner of the Lead needs to re-contact and follow up with the Lead.</description>
        <label>Follow up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Global: Identifies the gender of the contact on the Lead.</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Global: Identifies the geographic region that the Lead belongs to.</description>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>CTIMGI: Field to capture the home phone number of the Student prospect on the lead.</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_Student_heard_about_us__c</fullName>
        <description>CTIMGI: Field to identify how the Lead first heard about CTI MGI courses/qualifications. This field is unique to South Africa.</description>
        <label>How Student heard about us?</label>
        <picklist>
            <picklistValues>
                <fullName>School Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word of Mouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News Paper/Magazine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Identification_Number__c</fullName>
        <description>CTIMGI: Identifies the National Identification number of the contact on 

the lead. This field is unique to South Africa.</description>
        <label>Identification Number</label>
        <length>13</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Institution_Organisation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>CTIMGI: Captures the School that the contact on the Lead Attended. This field looks up to the Account Object to enable the user to associate the Lead with School Accounts.</description>
        <label>Institution/Organisation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organisation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Student Prospect</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Institution_organisation_if_Other__c</fullName>
        <description>CTIMGI: Field to capture the School of the contact on the Lead if the School does not already exist in the database as a School Account.</description>
        <label>Institution/organisation (if Other)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CTIMGI Identifies if the contact on the Lead has attended a pre-registration student interview. This needs to be checked to allow the Interview to be converted.</description>
        <label>Interview Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCreatedFromLead__c</fullName>
        <description>Global: This prevents a user from  creating Learner accounts using the request new account functionality. This will be defaulted to true on creation of a Lead</description>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCreatedFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLeadConvertedContact__c</fullName>
        <description>This is used to check if contact is created by lead conversion.</description>
        <formula>True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLeadConvertedContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>K12_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to select if the Schools spans grades 0-6 and 7-12</description>
        <inlineHelpText>Check this box if the School has both Primary and Secondary grades.</inlineHelpText>
        <label>K12 School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_Account__c</fullName>
        <description>D2L: Field to record the Leads Last Name to be mapped to the Last name on the Account. This field will be updated using a process flow with the last name of the lead.</description>
        <label>Last Name - Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>To get the Last Name of the Lead and Map with the Account Surname</description>
        <formula>LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <description>CTIMGI: Calculates the number of days that the lead has been created within the system for.</description>
        <formula>IF(IsConverted, ConvertedDate - DATEVALUE(CreatedDate), TODAY()  - DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Role__c</fullName>
        <description>This field is used to determine the role of the lead. The value is then mapped across to the contact record when the lead is converted.</description>
        <formula>IF(RecordType.DeveloperName == &apos;D2L&apos;, &apos;Learner&apos;, &apos;&apos;)</formula>
        <label>Lead Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_changed_InProgress__c</fullName>
        <description>Global/CTIMGI field: Captures the date that the Lead entered the Lead Status &apos;In progress&apos;</description>
        <label>Date that the Lead changed - In progress</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_changed_Open__c</fullName>
        <description>Global/ CTIMGI field: Captures the date that the field enters the status &apos;Open&apos;.</description>
        <label>Date that the Lead changed to &apos;Open&apos;</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_changed_Qualified__c</fullName>
        <description>Global/ CTIMGI field: Captures the date that the Lead enters the Status &apos;Qualified&apos;.</description>
        <label>Date that the Lead changed to Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_changed_Unqualified__c</fullName>
        <description>Global/CTIMGIfields: Captures the date that the Lead entered the status &apos;Unqualified&apos;</description>
        <label>Date that the Lead changed - Unqualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>CTIMGI: Identifies the current level that the contact on the Lead is studying or working at.</description>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Buying__c</fullName>
        <description>Global Identifies the probability that the Lead will purchase a product or register for a course/qualification.</description>
        <label>Likelihood of Buying</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer will not buy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>